fix z-index level

--- a/scss/inc/__cover-section.scss
+++ b/scss/inc/__cover-section.scss
@@ -12,7 +12,7 @@
 
         .cover-img-wrapper {
             width: 100%;
-            
+
             img {
                 width: 100%;
                 height: auto;
@@ -44,6 +44,7 @@
                 border-bottom-width: 50px;
                 color: inherit;
                 position: relative;
+                z-index: -1;
 
                 &::after {
                     content: "";
@@ -61,6 +62,7 @@
                 margin-left: 20px;
                 position: relative;
                 top: 3px;
+                z-index: -1;
             }
         }
     }
